# backend/server/Project/User/controller/user.js
@@ -4,6 +4,10 @@ const createBaseService = require("../../../../helpers/base.service")
 
 const defaultPopulate = [
     { path: 'role' },
+    { 
+        path: 'response',
+        populate: { path: 'form' }
+    },
 ]
 
 module.exports = createBaseService(objSchema, defaultPopulate);
